# mass-swarm-ai-simulator

./: .aiexclude  .gitignore  AGENT_WORKFLOW.md  CASE_STUDY.md  README.md  ROADMAP.md  TRAINING_STATUS.md  USAGE.md  build-wasm.sh  curriculum_implementation_plan.md  dev.sh  dispatch.py  dispatch.sh  implementation_plan.md  implementation_plan_feature_1.md  implementation_plan_feature_2.md  implementation_plan_feature_4.md  implementation_plan_task_02.md  implementation_plan_task_04.md  implementation_plan_task_07.md  mathematics_reference.md  scratch.py  scratch_fix.py  strategy_brief.md  task_state.json  task_tool.py  task_tool.sh  train.sh
micro-core/: Cargo.toml  README.md  clippy_errors.txt  out.txt  test  test.rs  test_map.rs
micro-core/src/: config.rs  lib.rs  main.rs  terrain.rs  visibility.rs  wasm_api.rs
micro-core/src/bridges/: mod.rs  ws_protocol.rs  ws_server.rs  zmq_protocol.rs
micro-core/src/components/: engine_override.rs  entity_id.rs  faction.rs  mod.rs  movement_config.rs  position.rs  stat_block.rs  tactical.rs  unit_class.rs  velocity.rs  vision_radius.rs
micro-core/src/config/: buff.rs  cooldown.rs  mod.rs  simulation.rs  tactical_overrides.rs  unit_registry.rs  zones.rs
micro-core/src/pathfinding/: flow_field.rs  mod.rs
micro-core/src/plugins/: mod.rs  telemetry.rs
micro-core/src/rules/: aoe.rs  behavior.rs  interaction.rs  mod.rs  navigation.rs  removal.rs
micro-core/src/spatial/: hash_grid.rs  mod.rs
micro-core/src/systems/: aoe_interaction.rs  directive_executor.rs  engine_override.rs  flow_field_safety.rs  flow_field_update.rs  flow_field_update_tests.rs  (+11 more)
micro-core/tests/: qa_task_01.rs
(+937 files in other folders)
