[package]
name = "micro-core"
version = "0.1.0"
edition = "2024"

[features]
default = ["debug-telemetry", "native"]
debug-telemetry = []
native = ["dep:tokio", "dep:tokio-tungstenite", "dep:zeromq", "dep:futures-util"]
wasm = ["dep:wasm-bindgen", "dep:js-sys", "dep:getrandom"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "micro-core"
path = "src/main.rs"
required-features = ["native"]

[dependencies]
bevy = { version = "0.18", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9"
bevy_state = "0.18.1"

# Native-only (WebSocket server, ZMQ bridge, async runtime)
tokio = { version = "1.51.0", features = ["rt-multi-thread", "macros", "sync"], optional = true }
tokio-tungstenite = { version = "0.29.0", optional = true }
zeromq = { version = "0.5", optional = true }
futures-util = { version = "0.3.32", optional = true }

# WASM-only
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
getrandom = { version = "0.3", features = ["wasm_js"], optional = true }
